--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zemax_controller"]
-	path = zemax_controller
-	url = https://github.com/oxford-pcs/zemax_controller.git
+[submodule "zController"]
+	path = zController
+	url = https://github.com/oxford-pcs/zController.git
